# record-splicer

./: .gitignore  LICENSE  README.md  RecordSplices.hs  latest.cabal  record-splicer.cabal  stack.yaml
app/: Main.hs
src/: RecordSplicer.hs  RecordSplices.hs
test/: Example.hs
