name:                record-splicer
version:             0.1.0.0
synopsis:            A library to splice record data types in Haskell
description:         Generates smaller data types from larger data types in Haskell using Template Haskell. Also generates a few helper functions to interconvert between them.
homepage:            https://github.com/vacationlabs/record-splicer#readme
license:             MIT
license-file:        LICENSE
author:              Pranay Sashank
maintainer:          pranaysashank@gmail.com
copyright:           2017 Pranay Sashank
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RecordSplicer
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
  default-language:    Haskell2010

test-suite RecordSplicer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Example.hs
  build-depends:       base
                     , lens
                     , record-splicer
                     , template-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vacationlabs/record-splicer
